# tone-sphere

./: README.md  api_client.py  audio_engine_backend.py  main.py  pyinstaller_to_program.sh  pyproject.toml
config/: default_config.yaml
tonesphere/: __init__.py  __main__.py
tonesphere/api/: models.py  server.py
tonesphere/cli/: interface.py
tonesphere/core/: engine.py  models.py  processor.py  routing.py
tonesphere/devices/: virtual.py
tonesphere/gui/: interactive_canvas.py  studio.py
tonesphere/network/: streamer.py
tonesphere/utils/: config.py  logger.py
